test/library/packages/UnitTest/AssertNotEqual/AssertNotEqualTest.good
Error Caught in Equal 1D Arrays
AssertionError: in AssertNotEqualTest.chpl:7 - assert failed -
'1 2 5'
==
'1 2 5'
================================================================================
Error Caught in Equal High Dim Arrays
AssertionError: in AssertNotEqualTest.chpl:7 - assert failed -
'0.0 0.0 0.0 0.0 0.0 0.0 0.0
0.0 0.0 0.0 0.0 0.0 0.0 0.0
0.0 0.0 0.0 0.0 0.0 0.0 0.0
0.0 0.0 0.0 0.0 0.0 0.0 0.0
0.0 0.0 0.0 0.0 0.0 0.0 0.0'
==
'0.0 0.0 0.0 0.0 0.0 0.0 0.0
0.0 0.0 0.0 0.0 0.0 0.0 0.0
0.0 0.0 0.0 0.0 0.0 0.0 0.0
0.0 0.0 0.0 0.0 0.0 0.0 0.0
0.0 0.0 0.0 0.0 0.0 0.0 0.0'
================================================================================
Error Caught in Equal 0-based arrays
AssertionError: in AssertNotEqualTest.chpl:7 - assert failed -
'1 2 4'
==
'1 2 4'
================================================================================
Error Caught in Equal Integers
AssertionError: in AssertNotEqualTest.chpl:7 - assert failed -
'1.0'
==
'1'
================================================================================
Error Caught in Equal Ranges
AssertionError: in AssertNotEqualTest.chpl:7 - assert failed -
'1..6'
==
'1..6'
================================================================================
Error Caught in Equal Strings
AssertionError: in AssertNotEqualTest.chpl:7 - assert failed -
'equal string'
==
'equal string'
================================================================================
